ProjetCompil/Verif/Test/fail/typeTrouverType.cas
program
   i : max_int;
begin
   i := 1; 
end.